fix: container width on mobile

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -2,7 +2,7 @@
   .content {
     grid-template-columns: 3fr 2fr;
 
-    @media screen and (max-width: 720px){
+    @media screen and (max-width: 720px) {
       grid-template-columns: 1fr;
     }
 
@@ -14,11 +14,20 @@
       position: relative;
       max-width: 320px;
 
+      @media screen and (max-width: 720px) {
+        display: flex;
+        justify-content: center;
+      }
+
       .image {
         transition: $transition;
         display: block;
         position: relative;
         width: 100%;
+
+        @media screen and (max-width: 720px) {
+          width: 80%;
+        }
 
         @apply rounded-md;
 
@@ -28,7 +37,7 @@
           display: block;
           position: absolute;
           width: 100%;
-          height: 320px;
+          height: 100%;
           z-index: 1;
           transition: $transition;
 
