--- a/styles/app.scss
+++ b/styles/app.scss
@@ -9,8 +9,8 @@
 @import 'home';
 @import 'about';
 
-
-html,body {
+html,
+body {
   width: 100%;
 }
 
